Clean Footer styles/class

--- a/_dev/css/components/footer.scss
+++ b/_dev/css/components/footer.scss
@@ -28,9 +28,11 @@
   //border-left: $gray-light 2px solid;
   //padding-left: 3rem;
   color: $gray;
+  /*
   .block-contact-title {
     color:$gray-darker;
   }
+  */
 }
 .linklist {
   .blockcms-title a {
@@ -43,6 +45,7 @@
     color: $brand-primary;
   }
 }
+/*
 .blockcms-title,
 .myaccount-title,
 .myaccount-title a,
@@ -50,6 +53,7 @@
   font-weight: 700;
   font-size: $base-font-size;
 }
+*/
 .block-social {
   text-align: right;
 }
