--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -27,10 +27,11 @@
 @import "components/errors";
 @import "components/customization-modal";
 @import "components/sitemap";
-@import "components/card-product";
 //Importado de BS3
 @import "partials/visibility";
 //Nuevos estilos
+@import "components/card-product";
+@import "components/titles";
 
 
 /*** HEADER ***/
