Clean form subscription. Clean style menu responsive open. Clean style products variants

--- a/_dev/css/components/featuredproducts.scss
+++ b/_dev/css/components/featuredproducts.scss
@@ -69,13 +69,13 @@
     text-align: center;
   }
   .variant-links {
-    position: relative;
+    //position: relative;
     text-align: center;
-    width: 100%;
-    top: -0.25em;
-    padding-top: 0.1875rem;
-    min-height: 2.5rem;
-    background: white;
+    //width: 100%;
+    //top: -0.25em;
+    //padding-top: 0.1875rem;
+    //min-height: 2.5rem;
+    //background: white;
   }
   .highlighted-informations {
     position: absolute;
