--- a/_dev/css/components/mainmenu.scss
+++ b/_dev/css/components/mainmenu.scss
@@ -61,7 +61,7 @@
 
 #mobile_top_menu_wrapper {
   flex-direction: column;
-  margin-top: 0.625rem;
+  //margin-top: 0.625rem;
   padding-bottom: 0.625rem;
   background: white;
   #top-menu {
