FIX Responsive Dropdown Show/Close

--- a/_dev/css/components/categories.scss
+++ b/_dev/css/components/categories.scss
@@ -389,7 +389,8 @@
           }
           .collapse {
             display: none;
-            &.in {
+            &.in,
+            &.show {
               display: block;
             }
           }
