--- a/_dev/css/components/footer.scss
+++ b/_dev/css/components/footer.scss
@@ -210,7 +210,8 @@
       }
       .collapse {
         display: none;
-        &.in {
+        &.in,
+        &.show {
           display: block;
         }
       }
