Add swiper js plugin to Featured Products

--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -32,6 +32,8 @@
 //Nuevos estilos
 @import "components/card-product";
 @import "components/titles";
+//swiper plugin
+@import "~swiper/dist/css/swiper.min.css";
 
 
 /*** HEADER ***/
