--- a/_dev/css/components/_card-product.scss
+++ b/_dev/css/components/_card-product.scss
@@ -5,50 +5,52 @@
     margin-right: -1em;
 }
 
-.card-product {
-    flex: 1 0 60%;
-    box-sizing: border-box;
-    margin: 1rem 1em;
+.layout-left-column,
+.layout-right-column {
+    .products {
+        & > .card-product {
+            flex: 1 0 60%;
+            margin: 1rem 0;
+            @include media-breakpoint-up(sm) {
+                flex: 1 0 30%;
+                max-width: calc(50% -  1em);
+                margin: 1rem 1em;
+            }
+            @include media-breakpoint-up(md) {
+                flex: 1 0 25%;
+                max-width: calc(33.3333% - 2em);
+            }
+        }
+    }
+}
 
+.products {
+    & > .card-product {
+        flex: 1 0 60%;
+        box-sizing: border-box;
+        
+        @include media-breakpoint-up(sm) {
+            flex: 1 0 30%;
+            max-width: calc(50% -  1em);
+        }
+        @include media-breakpoint-up(md) {
+            flex: 1 0 25%;
+            max-width: calc(33.3333% - 2em);
+        }
+        @include media-breakpoint-up(lg) {
+            flex: 1 0 20%;
+            max-width: calc(25% - 1em);
+        }
+    }
+}
+
+.card-product {
+    margin: 1rem 1em;
     background-color: #d2d2d2;
     &__body {
         padding: 1rem 1em;
     }
     &__footer {
         padding: 1rem 1em 0;
-    }
-}
-.layout-left-column,
-.layout-right-column {
-    .card-product {
-        flex: 1 0 60%;
-        margin: 1rem 0;
-        @include media-breakpoint-up(sm) {
-            flex: 1 0 30%;
-            max-width: calc(50% -  1em);
-            margin: 1rem 1em;
-        }
-        @include media-breakpoint-up(md) {
-            flex: 1 0 25%;
-            max-width: calc(33.3333% - 2em);
-        }
-    }
-}
-@include media-breakpoint-up(sm) {
-    .card-product {
-        flex: 1 0 30%;
-        max-width: calc(50% -  1em);
-    }
-}
-@include media-breakpoint-up(md) {
-    .card-product {
-        flex: 1 0 25%;
-        max-width: calc(33.3333% - 2em);
-    }
-}
-@include media-breakpoint-up(lg) {
-    .card-product {
-        flex: 1 0 20%;
-        max-width: calc(25% - 1em);
     }
 }
