--- a/_dev/css/components/categories.scss
+++ b/_dev/css/components/categories.scss
@@ -164,6 +164,10 @@
         font-size:$font-size-lg;
       }
     }
+    .facet-color {
+      margin-left: -.3125rem;
+      margin-right: -.3125rem;
+    }
   }
 }
 #search_filters_brands,
@@ -340,8 +344,8 @@
     #left-column {
       width: 100%;
       #search_filters_wrapper {
-        margin-left: -30px;
-        margin-right: -30px;
+        //margin-left: -30px;
+        //margin-right: -30px;
       }
       #search_filter_controls {
         text-align: center;
@@ -384,8 +388,8 @@
             display: inline-block;
           }
           .navbar-toggler {
-            display: inline-block;
-            padding: 0.625rem 0.625rem 0 0;
+            //display: inline-block;
+            //padding: 0.625rem 0.625rem 0 0;
           }
           .collapse {
             display: none;
@@ -405,6 +409,11 @@
               border-top: 1px solid $gray-lighter;
               padding: 0.625rem;
             }
+          }
+          [data-toggle="collapse"] {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
           }
         }
       }
@@ -438,18 +447,35 @@
   }
 }
 
-@include media-breakpoint-down(xs) {
+@include media-breakpoint-down(sm) {
   .products-selection {
     .filter-button {
       //padding-left: 0;
     }
   }
   #category {
-    #left-column {
-      #search_filters_wrapper {
-        margin-left: -15px;
-        margin-right: -15px;
-      }
+    #left-column,
+    .left-column {
+      flex: 0 0 100%;
+      max-width: 100%;
+    }
+    #main {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+}
+@include media-breakpoint-down(xs) {
+  #category {
+    #left-column,
+    .left-column {
+      flex: initial;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    #main {
+      margin-left: 15px;
+      margin-right: 15px;
     }
   }
 }
