Add class to Products Pagination. Move Button Mode View Grid products. Mode view products for all Screen width Devices. Remove Swiper margin between Products Swipper

--- a/_dev/css/components/_card-product.scss
+++ b/_dev/css/components/_card-product.scss
@@ -60,7 +60,7 @@
     & > .row {
         flex-direction: column;
     }
-    @media (min-width: 768px) {
+    //@include media-breakpoint-up(sm) {
         .products>.card-product,
         .products>.card-product {
             width: 100%;
@@ -78,5 +78,5 @@
         .card-product__img {
             width: 20%;
         }
-    }
+    //}
 }
