--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -34,6 +34,7 @@
 @import "components/titles";
 //swiper plugin
 @import "~swiper/dist/css/swiper.min.css";
+@import "components/featured-products-slider";
 
 
 /*** HEADER ***/
