--- a/_dev/css/partials/_mixins.scss
+++ b/_dev/css/partials/_mixins.scss
@@ -23,6 +23,7 @@
       bottom: 0.3125rem;
       right: 0.125rem;
       color: $gray;
+      cursor: pointer;
       .search:hover {
         color: $brand-primary;
       }
