--- a/_dev/css/components/_card-product.scss
+++ b/_dev/css/components/_card-product.scss
@@ -80,3 +80,28 @@
         }
     //}
 }
+
+.card-product{
+    background-color: #eee;
+}
+
+@keyframes placeHolderShimmer{
+    0%{
+        background-position: -468px 0
+    }
+    100%{
+        background-position: 468px 0
+    }
+}
+
+.card-product__img {
+    animation-duration: 2.25s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: darkgray;
+    background: linear-gradient(to right, #eeeeee 10%, #dddddd 18%, #eeeeee 33%);
+    background-size: 800px 104px;
+    min-height: 200px;
+}
