--- a/_dev/css/components/imageslider.scss
+++ b/_dev/css/components/imageslider.scss
@@ -1,5 +1,4 @@
 .carousel {
-  box-shadow: 1px 1px 7px 0 rgba(0, 0, 0, 0.15);
   position: relative;
   .direction {
     z-index: auto;
@@ -7,9 +6,6 @@
   .carousel-inner {
     height: auto;
     margin: 0;
-    //@media (max-width: 767px) {
-    //  height: auto;
-    //}
     figure {
       margin: 0;
     }
@@ -56,7 +52,7 @@
     left: 0;
     width: 90px;
     font-size: 20px;
-    color: #fff;
+    color: #FFF;
     text-align: center;
     .icon-next,
     .icon-prev {
@@ -65,7 +61,7 @@
       }
       i {
         font-size: 3.125rem;
-        color: white;
+        color: #FFF;
       }
       &:hover {
         i {
