--- a/_dev/css/components/_util.scss
+++ b/_dev/css/components/_util.scss
@@ -11,7 +11,9 @@
 .bg-gray-lighter {
     background-color: $gray-lighter;
 }
-
+.text-underline {
+    text-decoration: underline;
+}
 .text-uppercase-first:first-letter {
     text-transform: uppercase;
 }
