--- a/_dev/css/components/checkout.scss
+++ b/_dev/css/components/checkout.scss
@@ -194,8 +194,10 @@ body#checkout {
       margin: 0;
     }
     .address-footer {
-      text-align: center;
-      padding: 0.625rem;
+      display: flex;
+      justify-content: space-around;
+      border-top: 1px solid $gray-lighter;
+      padding: 0.5rem 1rem;
     }
     #delivery-addresses,
     #invoice-addresses {
