--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -22,6 +22,7 @@
 @import "components/block-reassurance";
 @import "components/quickview";
 @import "components/stores";
+@import "components/header";
 @import "components/footer";
 @import "components/contact";
 @import "components/errors";
@@ -38,6 +39,7 @@
 //Material Icons vida DATA-ATTR
 @import "components/material-icons-data";
 @import "components/util";
+@import "components/hamburger";
 
 //TO-DO
 //Revisar archivos bootstrap que no serían necesario import
@@ -55,14 +57,6 @@ img {
   }
   .header-nav {
     border-bottom: $gray-light 1px solid;
-    #menu-icon {
-      vertical-align: middle;
-      cursor: pointer;
-      margin-left: 1rem;
-      .material-icons {
-        line-height: 50px;
-      }
-    }
     .right-nav {
       display: flex;
       flex-wrap: nowrap;
