Rename Scss File titles

--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -32,7 +32,7 @@
 @import "partials/visibility";
 //Nuevos estilos
 @import "components/card-product";
-@import "components/titles";
+@import "components/typography";
 //swiper plugin
 @import "~swiper/dist/css/swiper.min.css";
 @import "components/featured-products-slider";
